--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -41,9 +41,3 @@
         filter: grayscale(100%);
     }
 }
-
-@media (min-width: 1300px) {
-    .wrapper {
-        max-width: 60%;
-    }
-}
