--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -83,9 +83,3 @@
         flex-basis: 20%;
     }
 }
-
-@media (min-width: 1300px) {
-    .header .wrapper {
-        max-width: 60%;
-    }
-}
