--- a/src/components/investing.module.scss
+++ b/src/components/investing.module.scss
@@ -4,6 +4,7 @@
 }
 
 .title {
+    max-width: 80%;
     margin: 0 auto 2em auto;
 }
 
